Fixed header-section height to remove scrollbar in mobile. Modified cards section to be responsive for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ a {
 }
 
 .header-section {
-    height: 315px;
+    height: 325px;
     color: hsl(0, 0%, 85%);
     display: flex;
     flex-direction: column;
@@ -237,12 +237,15 @@ a {
     display: flex;
     min-height: 300px;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .cards-in-progress {
     border: 1px solid hsl(0, 0%, 45%);
     border-radius: 8px;
     flex: 1;
+    min-width: 300px;
+    padding-bottom: 22px;
 }
 
 .in-progress-header {
@@ -259,6 +262,8 @@ a {
     border: 1px solid hsl(0, 0%, 45%);
     border-radius: 8px;
     flex: 1;
+    min-width: 300px;
+    padding-bottom: 22px;
 }
 
 .completed-header {
